--- a/views/transaction.html.twig
+++ b/views/transaction.html.twig
@@ -187,9 +187,9 @@
                         <table class="users-table">
                             <thead>
                                 <tr>
-                                    <th>Nama Produk</th>
+                                    <th>Name</th>
                                     <th>QTY</th>
-                                    <th>Harga</th>
+                                    <th>Price</th>
                                 </tr>
                             </thead>
                             <tbody>
