--- a/views/transaction.html.twig
+++ b/views/transaction.html.twig
@@ -188,7 +188,7 @@
                             <thead>
                                 <tr>
                                     <th>Name</th>
-                                    <th>QTY</th>
+                                    <th>Total Items</th>
                                     <th>Price</th>
                                 </tr>
                             </thead>
