--- a/views/userUpdate.html.twig
+++ b/views/userUpdate.html.twig
@@ -184,7 +184,7 @@
 
                         <!-- TELEPHONE -->
                         <div class="form-group">
-                            <label for="telephone" class="form-label">Telephone <span class="required">*</span> </label>
+                            <label for="telephone" class="form-label">Telephone  </label>
 
                             <input
                                 type="tel"
