--- a/views/productUpdate.html.twig
+++ b/views/productUpdate.html.twig
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Products</title>
-        <link rel="stylesheet" href="/assets/style2user.css" />
+        <title>Product Create</title>
+        <link rel="stylesheet" href="/assets/style.css" />
     </head>
     <body class="main-body">
         <div class="container">
@@ -88,7 +88,7 @@
                             <span>Transaction</span>
                         </a>
 
-                        <a href="/products" class="nav-item active">
+                        <a href="#product" class="nav-item active">
                             <svg
                                 class="nav-icon"
                                 width="20"
@@ -167,80 +167,117 @@
                 </nav>
             </aside>
 
+            <!-- Main Content -->
             <main class="main-content">
-                <div class="page-header">
-                    <h1 class="page-title">Products</h1>
-                    <div class="breadcrumb-wrapper">
-                        <div class="breadcrumb">Dashboard</div>
-                        <div class="breadcrumb">/ Product</div>
-                    </div>
-                </div>
+                <div class="content-wrapper">
+                    <div class="page-header">
+                        <div class="header-icon">
+                            <svg
+                                class="back-icon"
+                                xmlns="http://www.w3.org/2000/svg"
+                                width="24"
+                                height="24"
+                                viewBox="0 0 24 24"
+                                fill="none"
+                                stroke="currentColor"
+                                stroke-width="4"
+                                stroke-linecap="round"
+                                stroke-linejoin="round"
+                            >
+                                <line x1="19" y1="12" x2="5" y2="12"></line>
+                                <polyline points="12 19 5 12 12 5"></polyline>
+                            </svg>
+                        </div>
 
-                <div class="content-container">
-                    <div class="table-header">
-                        <a href="/products/create">
-                            <button class="btn-new-user">Add Product +</button>
-                        </a>
+                        <div>
+                            <h2 class="page-title">Product Update</h2>
+                            <div class="breadcrumb-wrapper">
+                                <div class="breadcrumb">Dashboard</div>
+                                <div class="breadcrumb">/ Product</div>
+                                <div class="breadcrumb">/ Create</div>
+                            </div>
+                        </div>
                     </div>
 
-                    <div class="table-wrapper">
-                        <table class="users-table">
-                            <thead>
-                                <tr>
-                                    <th>Name</th>
-                                    <th>Stock</th>
-                                    <th>Price</th>
-                                    <th>Option</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                {% for product in products %}
-                                <tr>
-                                    <td>{{ product.name }}</td>
-                                    <td>{{ product.stock }}</td>
-                                    <td>{{ product.price }}</td>
+                    <!-- FORM -->
+                    <form
+                        class="user-form"
+                        method="post"
+                        action="/products/{{ id }}/update "
+                    >
+                        <div class="form-grid">
+                            <!-- NAME -->
+                            <div class="form-group">
+                                <label for="name" class="form-label">
+                                    Name <span class="required">*</span>
+                                </label>
 
-                                    <td>
-                                        <div class="action-buttons">
-                                            <a
-                                                href="/products/{{
-                                                    product.id
-                                                }}/update"
-                                            >
-                                                <button
-                                                    class="btn-action edit"
-                                                    title="Edit"
-                                                >
-                                                    <span class="icon-edit"
-                                                        >✏️</span
-                                                    >
-                                                </button>
-                                            </a>
-                                            <form
-                                                method="POST"
-                                                action="/products/{{
-                                                    product.id
-                                                }}/delete"
-                                                onsubmit="return confirm('Are you sure you want to delete this product?');"
-                                            >
-                                                <button
-                                                    class="btn-action delete"
-                                                    title="Delete"
-                                                >
-                                                    <span class="icon-trash"
-                                                        >🗑️</span
-                                                    >
-                                                </button>
-                                            </form>
-                                        </div>
-                                    </td>
-                                    {% endfor %}
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
+                                <input
+                                    type="text"
+                                    id="name"
+                                    name="name"
+                                    class="form-input"
+                                    title="Name required"
+                                    value="{% if input.name is defined %}{{
+                                        input.name
+                                    }}{% endif %}"
+                                />
+
+                                {% if errors.name is defined %}
+                                <div class="error">{{ errors.name }}</div>
+                                {% endif %}
+                            </div>
+
+                            <!-- price -->
+                            <div class="form-group">
+                                <label for="price" class="form-label">
+                                    Price <span class="required">*</span>
+                                </label>
+
+                                <input
+                                    type="number"
+                                    id="price"
+                                    name="price"
+                                    class="form-input"
+                                    title="Price required"
+                                    value="{{ input.price ?? 0 }}"
+                                />
+
+                                {% if errors.price is defined %}
+                                <div class="error">{{ errors.price }}</div>
+                                {% endif %}
+                            </div>
+
+                            <!-- stock -->
+                            <div class="form-group">
+                                <label for="stock" class="form-label">
+                                    Stock <span class="required">*</span>
+                                </label>
+
+                                <input
+                                    type="number"
+                                    id="stock"
+                                    name="stock"
+                                    class="form-input"
+                                    title="Stock required"
+                                    value="{{ input.stock ?? 0 }}"
+                                />
+
+                                {% if errors.stock is defined %}
+                                <div class="error">{{ errors.stock }}</div>
+                                {% endif %}
+                            </div>
+                        </div>
+
+                        <div class="form-actions">
+                            <button type="submit" class="btn btn-primary">
+                                Update
+                            </button>
+                        </div>
+                    </form>
                 </div>
             </main>
         </div>
+        <!-- penutup container -->
     </body>
 </html>
