(feat:Lela) Finalization UI

--- a/views/home.html.twig
+++ b/views/home.html.twig
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Martin</title>
-        <link rel="stylesheet" href="/assets/style4login.css" />
+        <link rel="stylesheet" href="/assets/style4home.css" />
     </head>
     <body>
         <!-- Background Decoration -->
