--- a/assets/style4home.css
+++ b/assets/style4home.css
@@ -15,6 +15,7 @@
                 justify-content: center;
                 padding: 40px 20px;
                 overflow-y: hidden;
+                overflow-x: hidden;
                 position: relative;
             }
 
