--- a/views/login.html.twig
+++ b/views/login.html.twig
@@ -4,10 +4,14 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Login Page</title>
-        <link rel="stylesheet" href="/assets/style.css" />
+        <link rel="stylesheet" href="/assets/style5login.css" />
     </head>
 
-    <body class="login-body">
+    <body>
+    <!-- Background Decoration -->
+        <div class="bg-decoration bg-circle-1"></div>
+        <div class="bg-decoration bg-circle-2"></div>
+        <div class="bg-decoration bg-circle-3"></div>
         <div class="login-container">
             <div class="form-box active" id="login-form">
                 <form action="/login" method="POST">
